# hz-rc-archive

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  scrapy.cfg
.github/workflows/: main.yml
hz_rc_archive/: itemloaders.py  items.py  middlewares.py  pipelines.py  settings.py
hz_rc_archive/spiders/: hzrc.py
tests/: test_items.py
