[tool.poetry]
name = "hz-rc-archive"
version = "0.1.0"
description = "Archive GCCRC in Hangzhou."
authors = ["alex4814 <alex4814.fu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
