[tool.poetry]
name = "hz-rc-archive"
version = "0.1.0"
description = "Archive GCCRC in Hangzhou."
authors = ["alex4814 <alex4814.fu@gmail.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "~3.8"
Scrapy = "^2.5.0"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
flake8 = "^3.9.1"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "hz_rc_archive/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
